# Pix2Poly

./: Dockerfile  api.py  config.py  polygon_inference.py  pyproject.toml  start_api.sh  utils.py
models/: model.py
